--- a/package.json
+++ b/package.json
@@ -14,14 +14,25 @@
     "author": "alessandrofoglia07",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "concurrently": "^8.2.0",
         "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "mongoose": "^7.4.1"
+        "jsonwebtoken": "^9.0.1",
+        "leo-profanity": "^1.7.0",
+        "mongoose": "^7.4.1",
+        "nodemailer": "^6.9.4",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
+        "@types/jsonwebtoken": "^9.0.2",
+        "@types/leo-profanity": "^1.5.0",
+        "@types/nodemailer": "^6.4.9",
+        "@types/uuid": "^9.0.2",
         "@typescript-eslint/eslint-plugin": "^6.2.0",
         "@typescript-eslint/parser": "^6.2.0",
         "eslint": "^8.45.0"
