--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "keywords": [],
     "author": "alessandrofoglia07",
-    "license": "ISC",
+    "license": "MIT",
     "dependencies": {
         "bcrypt": "^5.1.0",
         "concurrently": "^8.2.0",
@@ -22,6 +22,7 @@
         "jsonwebtoken": "^9.0.1",
         "leo-profanity": "^1.7.0",
         "mongoose": "^7.4.1",
+        "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.4",
         "uuid": "^9.0.0"
     },
@@ -31,6 +32,7 @@
         "@types/express": "^4.17.17",
         "@types/jsonwebtoken": "^9.0.2",
         "@types/leo-profanity": "^1.5.0",
+        "@types/multer": "^1.4.7",
         "@types/nodemailer": "^6.4.9",
         "@types/uuid": "^9.0.2",
         "@typescript-eslint/eslint-plugin": "^6.2.0",
