--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
         "bcrypt": "^5.1.0",
         "concurrently": "^8.2.0",
         "cors": "^2.8.5",
+        "curse-filter": "^3.1.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.1",
-        "leo-profanity": "^1.7.0",
         "mongoose": "^7.4.1",
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.4",
