--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "license": "MIT",
     "dependencies": {
         "bcrypt": "^5.1.0",
+        "cheerio": "^1.0.0-rc.12",
         "concurrently": "^8.2.0",
         "cors": "^2.8.5",
         "curse-filter": "^3.1.0",
