--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "jsonwebtoken": "^9.0.1",
         "mongoose": "^7.4.1",
         "multer": "^1.4.5-lts.1",
+        "node-cron": "^3.0.2",
         "nodemailer": "^6.9.4",
         "uuid": "^9.0.0",
         "zod": "^3.21.4"
@@ -35,6 +36,7 @@
         "@types/jsonwebtoken": "^9.0.2",
         "@types/leo-profanity": "^1.5.0",
         "@types/multer": "^1.4.7",
+        "@types/node-cron": "^3.0.8",
         "@types/nodemailer": "^6.4.9",
         "@types/uuid": "^9.0.2",
         "@typescript-eslint/eslint-plugin": "^6.2.0",
