--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "tsc -p .",
         "dev:ts": "tsc -w",
-        "dev:js": "npx nodemon --legacy-watch --watch src --watch app dist/index.js",
+        "dev:js": "nodemon --legacy-watch --watch ./src --watch ./app/src dist/index.js",
         "dev": "concurrently npm:dev:*",
         "start": "node dist/index.js"
     },
@@ -42,6 +42,7 @@
         "@typescript-eslint/parser": "^6.2.0",
         "concurrently": "^8.2.0",
         "eslint": "^8.45.0",
+        "nodemon": "^3.0.1",
         "typescript": "^5.1.6"
     },
     "type": "module"
