Bug fixed in Dockerfile.prod

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -22,7 +22,8 @@ COPY --from=build app/package*.json .
 
 RUN npm install --only=production
 
-COPY --from=build /app/dist .
+COPY --from=build /app/dist ./dist
+COPY --from=build /app/public ./public
 
 ENV PORT 5000
 
