--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
     "license": "MIT",
     "dependencies": {
         "bcrypt": "^5.1.0",
-        "cheerio": "^1.0.0-rc.12",
+        "cheerio": "1.0.0-rc.12",
         "cors": "^2.8.5",
         "curse-filter": "^3.1.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.1",
-        "mongoose": "^7.4.1",
+        "mongoose": "^7.5.0",
         "multer": "^1.4.5-lts.1",
         "node-cron": "^3.0.2",
         "nodemailer": "^6.9.4",
         "uuid": "^9.0.0",
-        "zod": "^3.21.4"
+        "zod": "^3.22.2"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
@@ -35,6 +35,7 @@
         "@types/jsonwebtoken": "^9.0.2",
         "@types/leo-profanity": "^1.5.0",
         "@types/multer": "^1.4.7",
+        "@types/node": "^20.5.7",
         "@types/node-cron": "^3.0.8",
         "@types/nodemailer": "^6.4.9",
         "@types/uuid": "^9.0.2",
