Fixed module property in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "es2016",
-        "module": "ESNext",
+        "module": "NodeNext",
         "rootDir": "./src",
         "moduleResolution": "NodeNext",
         "outDir": "./dist",
