--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
         "curse-filter": "^5.2.4",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "helmet": "^7.0.0",
         "jsonwebtoken": "^9.0.1",
         "mongoose": "^7.5.0",
         "multer": "^1.4.5-lts.1",
         "node-cron": "^3.0.2",
         "nodemailer": "^6.9.4",
         "uuid": "^9.0.0",
-        "zod": "^3.22.2"
+        "zod": "^3.22.4"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
