--- a/package.json
+++ b/package.json
@@ -14,38 +14,38 @@
     "author": "alessandrofoglia07",
     "license": "MIT",
     "dependencies": {
-        "bcrypt": "^5.1.0",
+        "bcrypt": "^5.1.1",
         "cheerio": "1.0.0-rc.12",
         "cors": "^2.8.5",
         "curse-filter": "^5.2.4",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "helmet": "^7.0.0",
-        "jsonwebtoken": "^9.0.1",
-        "mongoose": "^7.5.0",
-        "multer": "^1.4.5-lts.1",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^7.6.3",
+        "multer": "1.4.5-lts.1",
         "node-cron": "^3.0.2",
-        "nodemailer": "^6.9.4",
-        "uuid": "^9.0.0",
+        "nodemailer": "^6.9.7",
+        "uuid": "^9.0.1",
         "zod": "^3.22.4"
     },
     "devDependencies": {
-        "@types/bcrypt": "^5.0.0",
-        "@types/cors": "^2.8.13",
-        "@types/express": "^4.17.17",
-        "@types/jsonwebtoken": "^9.0.2",
-        "@types/leo-profanity": "^1.5.0",
-        "@types/multer": "^1.4.7",
-        "@types/node": "^20.5.7",
-        "@types/node-cron": "^3.0.8",
-        "@types/nodemailer": "^6.4.9",
-        "@types/uuid": "^9.0.2",
-        "@typescript-eslint/eslint-plugin": "^6.2.0",
-        "@typescript-eslint/parser": "^6.2.0",
-        "concurrently": "^8.2.0",
-        "eslint": "^8.45.0",
+        "@types/bcrypt": "^5.0.1",
+        "@types/cors": "^2.8.15",
+        "@types/express": "^4.17.20",
+        "@types/jsonwebtoken": "^9.0.4",
+        "@types/leo-profanity": "^1.5.2",
+        "@types/multer": "^1.4.9",
+        "@types/node": "^20.8.9",
+        "@types/node-cron": "^3.0.10",
+        "@types/nodemailer": "^6.4.13",
+        "@types/uuid": "^9.0.6",
+        "@typescript-eslint/eslint-plugin": "^6.9.0",
+        "@typescript-eslint/parser": "^6.9.0",
+        "concurrently": "^8.2.2",
+        "eslint": "^8.52.0",
         "nodemon": "^3.0.1",
-        "typescript": "^5.1.6"
+        "typescript": "^5.2.2"
     },
     "type": "module"
 }
