--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "multer": "1.4.5-lts.1",
         "node-cron": "^3.0.2",
         "nodemailer": "^6.9.7",
+        "stripe": "^14.3.0",
         "uuid": "^9.0.1",
         "zod": "^3.22.4"
     },
