--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "curse-filter": "^5.2.4",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "express-mongo-sanitize": "^2.2.0",
+        "express-rate-limit": "^7.1.4",
         "helmet": "^7.0.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.6.3",
